--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -1,2 +1,11 @@
 // Fonts here
-// see more: https://github.com/vedees/webpack-template/blob/master/README.md#import-js-files
+// Example
+// @font-face {
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: 400;
+//   font-display: swap;
+//   src: local('Roboto'), local('Roboto-Regular'),
+//        url('../fonts/roboto-v20-latin_cyrillic-regular.woff2') format('woff2'),
+//        url('../fonts/roboto-v20-latin_cyrillic-regular.woff') format('woff');
+// }
